--- a/config/default_c32.yaml
+++ b/config/default_c32.yaml
@@ -1,8 +1,5 @@
 data:
-  train_dir: 'datasets/' # root path of train data (either relative/absoulte path is ok)
-  train_meta: 'metadata/libritts_train_clean_360_audiopath_text_sid_train.txt'  # relative path of metadata file from train_dir
-  val_dir: 'datasets/' # root path of validation data
-  val_meta: 'metadata/libritts_train_clean_360_audiopath_text_sid_val.txt'  # relative path of metadata file from val_dir
+  data_dir: '/home/ubuntu/data_celebs_v7'
 #############################
 train:
   num_workers: 8
@@ -53,7 +50,7 @@ dist_config:
   world_size: 1
 #############################
 log:
-  summary_interval: 1
+  summary_interval: 100
   validation_interval: 1
   save_interval: 1
   num_audio: 5
