--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-librosa
-matplotlib
-numpy
-scipy
-torch
-tensorboard
-tqdm
+librosa==0.10.2
+matplotlib==3.8.4
+numpy==1.26.4
+scipy==1.13.0
+torch==2.3.1
+torchaudio==2.3.1
+tqdm==4.66.4
 omegaconf
